--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+body {
+	width: 80%;
+	margin: 0 auto;
+}
+
 figure {
-  width: 200px;
+  width: 250px;
   background: #aaa;
   border: 2px solid #999;
   overflow: hidden;
@@ -7,9 +12,9 @@ figure {
 
 figure img {
   width: 100%;
-  height: 300px;
+  height: 250px;
   background: #eee;
-  margin-bottom: -4em;
+  margin-bottom: -250px;
   display: block;
 }
 
@@ -27,10 +32,10 @@ figure img {
 */
 figcaption {
   box-sizing: border-box;
-  height: 4em;
+  height: 250px;
   line-height: 1.2em;
   padding: .25em;
-  transform: translateY(4em);
+  transform: translateY(250px);
   background: #fff;
   /* background: rgba( 255, 255, 255, 0 ); */
   opacity: 0;
@@ -47,3 +52,39 @@ figure:hover figcaption {
   /* background: rgba( 255, 255, 255, .78 ); */
   opacity: .78;
 }
+
+p {
+  text-align: center;
+}
+
+header {
+	text-align: center;
+}
+
+main {
+	display: flex;
+	justify-content: space-around;
+	flex-direction: column;
+	align-items: center;
+	margin: 0 auto;
+}
+
+/* FIRST BREAKPOINT (MEDIUM SIZE) */
+@media screen and (min-width: 500px) {
+	main {
+		display: inline-flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		width: 80%;
+	}
+}
+/* END FIRST BREAKPOINT */
+
+/* SECOND BREAKPOINT (DESKTOP SIZE) */
+@media screen and (min-width: 800px) {
+	main {
+		width: 100%;
+	}
+}
+/* END SECOND BREAKPOINT */
+
